[package]
name = "tin"
version = "0.0.2"
authors = ["Lilis Iskandar <veeableful@gmail.com>"]
description = "A tiny one-off static file server that can be used as an alternative to Python's SimpleHTTPServer or http.server."
license = "GPL-2.0"

[dependencies]
getopts = "0.2.14"
iron = "0.2.6"
staticfile = "0.1.0"
time = "0.1.34"
